--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-admob",
-  "version": "2.1.0",
+  "name": "@bam.tech/react-native-admob",
+  "version": "2.1.1",
   "description": "A react-native component for Google AdMob banners and interstitials",
   "author": "Simon Bugert <simon.bugert@gmail.com>",
   "main": "index.js",
